--- a/flower-shop-assignment/style.css
+++ b/flower-shop-assignment/style.css
@@ -14,15 +14,35 @@ body{
     font-weight: 700;
 }
 
+.section-title{
+    color: #272727;
+text-align: center;
+
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+
+.section-description{
+    color: rgba(39, 39, 39, 0.60);
+text-align: center;
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; /* 166.667% */
+}
+
   
   
  /*header related style*/
  .header{
     width: 1920px;
-height: 850px;
-flex-shrink: 0;
-background: rgba(229, 84, 115, 0.10);
-padding: 200px 240px 140px 240px;
+   height: 850px;
+   flex-shrink: 0;
+   background: rgba(229, 84, 115, 0.10);
+   padding: 200px 240px 140px 240px;
 
 
  }
@@ -30,12 +50,39 @@ padding: 200px 240px 140px 240px;
     padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     
+ }
+ .banner-content{
+    width: 708px;
+    height: 506px;
  }
  .banner.pic{
     width: 630px;
  }
+.banner-greeting{
+    font-size: 45px;
+    color: #272727;
+    margin-bottom: 0;
+}
+.banner-description{
+    color: rgba(39, 39, 39, 0.60);
 
+   font-size: 18px;
+   font-weight: 400;
+   line-height: 30px; /* 166.667% */
+   margin-top: 5px;
+}
+
+
+/*main section styles*/
+
+
+
+/*featured section*/
+.featured{
+    margin: 130px 0;
+}
 
 
  
