--- a/flower-shop-assignment/style.css
+++ b/flower-shop-assignment/style.css
@@ -83,7 +83,32 @@ line-height: 30px; /* 166.667% */
 .featured{
     margin: 130px 0;
 }
+.flower-tree{
+    display: flex;
+    justify-content: space-around;
+}
+.flower{
 
+    text-align: center;
+    display:inline;
+    width: 464px;
+    height: 538px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+    
+}
+
+.flower-title{
+    color: #272727;
+text-align: center;
+font-family: Lato;
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+line-height: 35px; /* 145.833% */
+text-decoration-line: underline;
+}
 
  
  
