--- a/flower-shop-assignment/style.css
+++ b/flower-shop-assignment/style.css
@@ -18,6 +18,7 @@ body{
     font-weight: 700;
 }
 
+
 .section-title{
     color: #272727;
 text-align: center;
@@ -140,7 +141,6 @@ line-height: 35px; /* 145.833% */
 
 }
 /*discount section*/
-
 .discount-title{
     color: #272727;
     
@@ -150,6 +150,7 @@ line-height: 35px; /* 145.833% */
     
     text-align: center;
 }
+
 
 .sign-up{
     text-align: center;
@@ -196,4 +197,52 @@ border-radius: 8px;
 }
 .deals-itam{
     justify-content: center;
+}
+/*footer part*/
+footer{
+    width: 1922px;
+   height: 449px;
+   flex-shrink: 0;
+   background: #111010;
+}
+
+.footer-description{
+    color: rgba(255, 255, 255, 0.40);
+text-align: center;
+
+font-size: 16px;
+
+font-weight: 400;
+line-height: normal;
+}
+
+.footer-para{
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+}
+.footer-text{
+    
+
+
+    color: #FFF;
+    font-family: Lato;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    
+}
+.footer-title{
+    color: #272727;
+    font-family: Lato;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 800;
+    
+    text-align: center;
 }
