--- a/flower-shop-assignment/style.css
+++ b/flower-shop-assignment/style.css
@@ -1,4 +1,8 @@
 /*common shared style*/
+*{
+    margin: 0px;
+    padding: 0px;
+}
 
 body{
     font-family: 'Lato', sans-serif;
@@ -43,11 +47,11 @@ line-height: 30px; /* 166.667% */
   
  /*header related style*/
  .header{
-    width: 1920px;
+    width: 1440px;
    height: 850px;
    flex-shrink: 0;
    background: rgba(229, 84, 115, 0.10);
-   padding: 200px 240px 140px 240px;
+   /* padding: 200px 240px 140px 240px; */
 
 
  }
@@ -59,7 +63,7 @@ line-height: 30px; /* 166.667% */
     
  }
  .banner-content{
-    width: 708px;
+    height: 708px;
     height: 506px;
  }
  .banner.pic{
@@ -87,12 +91,14 @@ line-height: 30px; /* 166.667% */
 /*featured section*/
 .featured{
     margin: 130px 0;
+    align-items: center;
+    
 }
 .flower-tree{
     display: flex;
     justify-content: space-around;
 }
-.flower{
+.flower1{
 
     text-align: center;
     display:inline;
@@ -101,6 +107,28 @@ line-height: 30px; /* 166.667% */
     flex-shrink: 0;
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
+    
+}
+.flower2{
+
+    text-align: center;
+    display:inline;
+    width: 464px;
+    height: 538px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(3, 3, 3, 0.15);
+    
+}
+.flower3{
+
+    text-align: center;
+    display:inline;
+    width: 464px;
+    height: 538px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(79, 211, 31, 0.15);
     
 }
 
@@ -155,12 +183,18 @@ line-height: 35px; /* 145.833% */
 .sign-up{
     text-align: center;
     margin-top: 50px;
+   width: 100%;
+   margin: 0 auto;
    }
    
-   .discount-content.img{
+   .img{
     width: 318px;
-    height: 420px;
-    flex-shrink: 0;
+    /* height: 420px; */
+
+   }
+   .discount_img{
+    width: 50%;
+    margin: 0 auto;
 
    }
 
@@ -200,10 +234,13 @@ border-radius: 8px;
 }
 /*footer part*/
 footer{
-    width: 1922px;
+    width: 1440px;
    height: 449px;
    flex-shrink: 0;
    background: #111010;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .footer-description{
